<resources>
    <string name="app_name">Z-Gaming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ed_Hint">Buscar productos</string>
    <string name="ed_Hint2">Buscar usuarios</string>
    <string name="text_detalle">detalle de la orden</string>

    <!-- login -->

    <string name="ivTop_description">moon_white_form</string>
    <string name="ivDown_description">moon_black_form</string>
    <string name="logo_title">logo_inicio</string>
    <string name="txtMail_hint">Correo</string>
    <string name="txtPassword_hint">Contraseña</string>
    <string name="txtPasswordForgotten_text">¿Olvidaste la contraseña?</string>
    <string name="btnLogin_text">Entrar</string>
    <string name="new_user_text">¿Nuevo usuario?</string>
    <string name="join_us_text">Únete</string>

    <!-- signup -->
    <string name="txtName_hint">Nombre</string>
    <string name="btnReturnLogin_text">Iniciar sesión</string>
    <string name="txtUsername_hint">Nombre de usuario</string>
    <string name="txtPhone_hint">Teléfono</string>

    <!-- restore_password -->

    <string name="txtPasswordConfirmed_hint">Confirmar contraseña</string>
    <string name="btnNewPasswordConfirmed_text">Confirmar</string>
    <string name="btnSendEmail_text">Enviar</string>

    <!-- sendemail -->

    <string name="tvLogin_text">Login</string>
    <string name="tvRemember_password">¿Te acuerdas de tu contraseña? </string>
    <string name="enter_mail_text">Ingrese su correo</string>
    <string name="reset_password_image_desc">reset_password_icon</string>
    <string name="confirmation_message_text">Restablecimiento de contraseña enviado a su dirección de correo electrónico</string>
    <string name="restore_password_subtitle_text">Ingrese su dirección de correo electrónico para solicitar un restablecimiento de contraseña.</string>
    <string name="restore_password_text">Reestablecer contraseña</string>
    <string name="return_login_description">Retornar a login</string>
    <string name="image_desc">Descripcion de la imagen</string>

    <!-- Edit product y add product -->
    <string name="image">Imagen</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Producto</string>
    <string name="product_price">Precio</string>
    <string name="product_stock">Cantidad disponible</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_add">Agregar</string>
    <string name="add_product">Agregar producto</string>
    <string name="edit_product">Editar producto</string>
    <string name="btn_save_cnanges">Guardar cambios</string>
    <string name="btn_return_to_products">Regresar a productos</string>

    <!-- Order details -->
    <string name="order">Orden</string>
    <string name="item">Item</string>
    <string name="start_time">Hora de inicio</string>
    <string name="confirmed_order">Orden confirmada</string>
    <string name="estimate_date">Fecha estimada de entrega:</string>
    <string name="text_description">Descripción</string>
    <string name="product_category">Tipo de producto</string>
    <string name="product_link">Link de la imagen en linea</string>

</resources>