<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imvTop"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/moon_white_form"
        android:contentDescription="@string/ivTop_description"
        app:cardBackgroundColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:contentDescription="@string/logo_title"
        android:src="@drawable/z_gaming_logo"
        app:layout_constraintBottom_toTopOf="@id/cvCredentials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/imvDown"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/moon_black_form"
        android:contentDescription="@string/ivDown_description"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCredentials"
        android:layout_width="360dp"
        android:layout_height="350dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="35dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtMail_hint"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/txtPassword_hint"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtPasswordForgotten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:text="@string/txtPasswordForgotten_text"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/app_background"
                android:text="@string/btnLogin_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/cvCredentials"
        app:layout_constraintTop_toBottomOf="@id/cvCredentials">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/join_us_text"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_btn_go_to"
            android:drawablePadding="4dp"
            android:text="@string/join_us_text"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
