<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearlayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReturnLogin"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/gray"
            android:contentDescription="@string/return_login_description"
            android:drawableLeft="@drawable/ic_btn_return_to"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearlayoutTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/image_selector"
           >

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="60dp"
                android:src="@drawable/upload_image"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_desc" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawablePadding="8dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawablePadding="8dp"
                android:inputType="textLongMessage"
                android:minLines="3"
                android:scrollHorizontally="false"
                android:gravity="top|start"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawablePadding="8dp"

                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_stock"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProductStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawablePadding="8dp"

                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelAdd"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:text="@string/btn_cancel"
                android:textColor="@android:color/black"
                app:strokeWidth="1dp"
                app:cornerRadius="8dp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddProduct"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/app_background"
                android:text="@string/btn_add"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:cornerRadius="8dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>