<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_details_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearlayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp">

        <ImageButton
            android:id="@+id/ovalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_fondo"
            android:padding="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_close_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Detalles de la compra"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearlayoutTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrderImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text = "#120500Z"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/item"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductsName"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/start_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txtOrderStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "02/04/2024, 12:17:23 pm"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_details_background"
                android:text="@string/confirmed_order"
                android:textColor="@color/order_confirmed"
                android:textAlignment="center"
                android:layout_marginBottom="25dp"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtStartDateConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "02/04/2024, 12:17:23 pm"
            android:textSize="15sp"
            android:layout_marginStart="60dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/estimate_date"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtEstimateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="03/04/2024 "
                android:textSize="15sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtStartOrderHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "12:17:23 pm"
            android:textSize="15sp"
            android:layout_marginStart="60dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>